some action with Alpine.JS

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,6 +3,10 @@
 @import 'tailwindcss/utilities';
 
 
+[x-cloak] {
+    display: none !important;
+  }
+
 /* Vertical line to the left of the comments */
 
 .comments-container::before {
